--- a/src/app/agent-service/devis-cvie/devis-cvie.component.html
+++ b/src/app/agent-service/devis-cvie/devis-cvie.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <app-dashbort></app-dashbort>
 
-  <div class="flex-1 mt-20 ml-0 mr-70">
+  <div class="flex-1 mt-20 ml-60">
   <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md overflow-hidden">
     <!-- Header -->
     <div class="bg-teal-800 py-4 px-6">
@@ -56,7 +56,7 @@
                  class="text-red-500 text-xs mt-1">
               <div *ngIf="devisForm.get('age')?.errors?.['required']">L'âge est obligatoire</div>
               <div *ngIf="devisForm.get('age')?.errors?.['min']">L'âge minimum est 18 ans</div>
-              <div *ngIf="devisForm.get('age')?.errors?.['max']">L'âge maximum est 70 ans</div>
+              <div *ngIf="devisForm.get('age')?.errors?.['max']">L'âge maximum est 65 ans</div>
             </div>
           </div>
         </div>
@@ -107,8 +107,10 @@
         <div class="space-y-4">
           <div class="flex items-start">
             <div class="flex items-center h-5">
-              <input id="garantieDeces" formControlName="garantieDeces" type="checkbox"
-                     class="focus:ring-teal-500 h-4 w-4 text-teal-600 border-gray-300 rounded">
+              <input id="garantieDeces" formControlName="garantieDeces" type="checkbox" checked [disabled]="isDisabled"
+              class="focus:ring-teal-500 h-4 w-4 text-teal-600 border-gray-300 rounded">
+
+
             </div>
             <div class="ml-3 text-sm">
               <label for="garantieDeces" class="font-medium text-gray-700">Décès</label>
@@ -170,4 +172,4 @@
       </div>
     </div>
   </div>
-</div>
+  </div>
